feat: Add custom code block styling

--- a/book.toml
+++ b/book.toml
@@ -9,3 +9,6 @@ title = "Cyrup AI Installation Guide"
 git-repository-url = "https://github.com/cyrup-ai/get.cyrup.ai"
 edit-url-template = "https://github.com/cyrup-ai/get.cyrup.ai/edit/main/{path}"
 site-url = "/get.cyrup.ai/"
+additional-css = ["theme/custom.css"]
+default-theme = "navy"
+prefer-dark-theme = true
