--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,14 +1,9 @@
 version: 2
 
 build:
-  os: ubuntu-22.04
+  os: ubuntu-lts-latest
   tools:
-    rust: "1.75"
+    rust: latest
   commands:
-    - curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.36/mdbook-v0.4.36-x86_64-unknown-linux-gnu.tar.gz | tar -xz
-    - mv mdbook /usr/local/bin/
-    - mdbook build
-
-# Build documentation in the docs/ directory with mdBook
-mdbook:
-  configuration: book.toml
+    - cargo install mdbook
+    - mdbook build docs --dest-dir $READTHEDOCS_OUTPUT/html
