--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,18 @@
 [package]
-name = "cyrup-install"
+name = "cyrup-sys"
 version = "0.1.0"
 edition = "2021"
-description = "Installer for Cyrup AI tools"
+description = "System installation and management for Cyrup AI"
 authors = ["Cyrup Engineering <eng@cyrup.ai>"]
 license = "MIT"
 
+[[bin]]
+name = "cyrup-sys"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0"
-which = "4.0"
-serde = { version = "1.0", features = ["derive"] }
-dirs = "5.0"
 tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
-tracing = "0.1"
-axum = "0.6"
-tracing-subscriber = "0.3"
-whoami = "1.4"
-clap = { version = "4.4", features = ["derive"] }
+futures = "0.3"
+cyrup = { path = "../cyrup" }
+secretrust = { path = "../secretrust" }
